<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2013 ParanoidAndroid Project

  This file is part of Paranoid OTA.

  Paranoid OTA is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Paranoid OTA is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Paranoid OTA.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">HALO)))</string>
    <string name="tap_to_launch">Tap to launch the Application</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="add">PIN</string>
    <string name="choose_app">PIN application</string>
    <string name="icon_picker_type">Select icon type:</string>
    <string name="icon_default">Default</string>
    <string name="icon_custom">Custom</string>
    <string name="unknown">Unknown</string>

    <string name="stop_to_remove">Please stop the service before removing any application(s) from the list, as not doing so will result in force closes, potentially forcing you to re-flash your ROM.</string>

    <string name="ext_notes">Notes;</string>
    <string name="ext_note1">Note 1</string>
    <string name="ext_note2">Note 2</string>
    <string name="ext_note3">Note 3</string>
    <string name="ext_note4">Note 4</string>
    <string name="extensions">Extensions</string>

    <string name="helper_static_2">Using HALO))):</string>
    <string name="helper_static_3">Understanding HALO))) is very simple! Just tap on the Pin button in your Action Bar. Note that the button may be on the top or the bottom of your screen.</string>
    <string name="helper_static_4">Next, Click the desired application you\'d like to pin on Halo from the list.</string>
    <string name="helper_static_5">Finally, click on the Start Button and you’re done. If you want to disable HALO))), Click on the \'Stop\' button.</string>
	
    <string name="nopa_title">Is ParanoidAndroid installed?</string>
    <string name="nopa_content">Halo))) is explicitly designed to work on ParanoidAndroid ROMs. You may not be able to experience the full potential and features, of HALO.</string>
    <string name="nopa_ok">Okay</string>
    <string name="nopa_download">Install ParanoidAndroid</string>
    
    <string name="description_1">Helper 1</string>
    <string name="description_2">Helper 2</string>
    <string name="description_3">Helper 3</string>
    <string name="preferenceicon_imageview">preferenceiconImageView</string>

</resources>
