<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2013 ParanoidAndroid Project

  This file is part of HALO.

  HALO is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  HALO is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with HALO.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory 
        android:title="@string/ext_notes">
        
        <EditTextPreference 
            android:key="ext_note1" 
            android:title="@string/ext_note1"/>
        
        <EditTextPreference 
            android:key="ext_note2" 
            android:title="@string/ext_note2"/>
        
        <EditTextPreference 
            android:key="ext_note3" 
            android:title="@string/ext_note3"/>
        
        <EditTextPreference 
            android:key="ext_note4" 
            android:title="@string/ext_note4"/>
        
    </PreferenceCategory>   
</PreferenceScreen>
